# messanger

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  example.messanger.service  example.messenger.service  main.py  pyproject.toml  requirements.txt  run.sh  synchronizer.py
docs/: Диаграмма.drawio
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.vue  input.css  main.ts  router.ts
frontend/src/assets/primevue/: accordion.css  autocomplete.css
frontend/src/components/: ChatDialog.vue  ChatElement.vue  ChatMessage.vue  ChatTextInput.vue  FindFriendship.vue  FindPeople.vue  FriendshipEntityRow.vue  LoginForm.vue  Profile.vue  RegisterForm.vue
frontend/src/pages/: Auth.vue  Dialogs.vue
frontend/src/services/: auth.service.ts  chats.ts  formats.ts  friendships.ts  my.toast.ts  scroller.ts  setupInterceptors.ts  token.refresh.ts  token.service.ts  user.service.ts  user.ts  validators.ts  websocket.ts
frontend/src/store/: auth.module.ts
massanger/: settings.py
massanger/auth/: jwt.py  models.py  schemas.py  users.py
massanger/sockets/: auth.py  handlers.py  manager.py  schemas.py  storages.py
massanger/subscribers/: handlers.py  messages.py  models.py  schemas.py  services.py
messanger/: rmq.py  settings.py
messanger/auth/: handlers.py  jwt.py
messanger/cache/: redis.py
messanger/chats/: handlers.py  messages.py  models.py  schemas.py
messanger/friendships/: handlers.py  schemas.py  services.py
messanger/orm/: session_manager.py
messanger/sockets/: auth.py  handlers.py  manager.py  status.py  storages.py
messanger/synchronizer/: consumer.py  sync.py
messenger/: rmq.py  settings.py
messenger/auth/: jwt.py  models.py  schemas.py  users.py
messenger/cache/: __init__.py  base.py  deco.py  local.py
messenger/chats/: handlers.py  messages.py  models.py
messenger/friendships/: models.py
messenger/sockets/: auth.py  handlers.py  manager.py  status.py
messenger/synchronizer/: consumer.py  sync.py
migrations/: env.py
migrations/versions/: 0bd38dc05b84_init.py  1e875d42121e_messages.py  d9840d471c35_subscribers.py  f20c583ebafa_init.py
nginx/: compose.conf  default1.conf
