[tool.poetry]
name = "messanger"
version = "0.1.0"
description = ""
authors = ["ig-rudenko <ig.rudenko1@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.33.0"
pydantic-settings = "^2.7.0"
redis = "^5.2.1"
websockets = "^14.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = "^1.7.4"
alembic = "^1.14.0"
pydantic = {extras = ["email"], version = "^2.10.3"}
bcrypt = "^4.2.1"


[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^24.10.0"}

[tool.poetry.group.postgres.dependencies]
asyncpg = "^0.30.0"

[tool.poetry.group.sqlite.dependencies]
aiosqlite = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
