[tool.poetry]
name = "messenger"
version = "0.1.0"
description = ""
authors = ["ig-rudenko <ig.rudenko1@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
pydantic-settings = "^2.10.1"
redis = "^6.4.0"
websockets = "^15.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.43"}
python-jose = {extras = ["cryptography"], version = "^3.4.0"}
passlib = "^1.7.4"
alembic = "^1.16.5"
pydantic = {extras = ["email"], version = "^2.11.7"}
bcrypt = "^4.3.0"
aio-pika = "^9.5.7"
asyncpg = "^0.30.0"
aiohttp = {extras = ["aiodns"], version = "^3.12.15"}
mako = "^1.3.10"

[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^24.10.0"}
aiosqlite = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
